bank-backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-backend-depl
  labels:
    type: bank-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
      service: bank
      language: java
  template:
    metadata:
      labels:
        type: backend
        service: bank
        language: java
    spec:
      containers:
        - name: bank-backend
          image: public.ecr.aws/h7c9d4d9/demo-bank-service:latest
          ports:
            - containerPort: 9001
