fraud-backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-backend-depl
  labels:
    type: fraud-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
      service: fraud
      language: java
  template:
    metadata:
      labels:
        type: backend
        service: fraud
        language: java
    spec:
      containers:
        - name: fraud-backend
          image: public.ecr.aws/h7c9d4d9/demo-fraud-service:latest
          ports:
            - containerPort: 9002
