payment-backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: payment-backend-pod
  labels:
    type: backend
    service: payment
    language: go
spec:
  containers:
    - name: payment-backend
      image: demo_payment-service
      imagePullPolicy: Never
      ports:
        - containerPort: 8888
