payment-db-pers-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-db-depl
  labels:
    type: payment-db
spec:
  replicas: 1
  selector:
    matchLabels:
      type: db
      vendor: postgres
  template:
    metadata:
      labels:
        type: db
        vendor: postgres
    spec:
      containers:
        - name: postgres-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pv-claim

      volumes:
        - name: postgres-pv-claim
          persistentVolumeClaim:
            claimName: postgres-pv-claim
