payment-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-db-pod
  labels:
    type: db
    vendor: postgres
spec:
  containers:
    - name: postgres-db
      image: postgres
      ports:
        - containerPort: 5432
