bank-fraud-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-backend-depl
  labels:
    type: bank-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
      service: bank
      language: java
  template:
    metadata:
      labels:
        type: backend
        service: bank
        language: java
    spec:
      containers:
        - name: bank-backend
          image: public.ecr.aws/h7c9d4d9/demo-bank-service:latest
          ports:
            - containerPort: 9001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-backend-depl
  labels:
    type: fraud-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
      service: fraud
      language: java
  template:
    metadata:
      labels:
        type: backend
        service: fraud
        language: java
    spec:
      containers:
        - name: fraud-backend
          image: public.ecr.aws/h7c9d4d9/demo-fraud-service:latest
          ports:
            - containerPort: 9002

---
apiVersion: v1
kind: Service
metadata:
  name: bank-backend-svc
spec:
  type: ClusterIP
  selector:
    type: backend
    service: bank
    language: java
  ports:
    - port: 9001
      targetPort: 9001 #exposed port from the pod
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: fraud-backend-svc
spec:
  type: ClusterIP
  selector:
    type: backend
    service: fraud
    language: java
  ports:
    - port: 9002
      targetPort: 9002 #exposed port from the pod
      protocol: TCP
