bank-fraud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-backend-svc
spec:
  type: ClusterIP
  selector:
    type: backend
    service: bank
    language: java
  ports:
    - port: 9001
      targetPort: 9001 #exposed port from the pod
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: fraud-backend-svc
spec:
  type: ClusterIP
  selector:
    type: backend
    service: fraud
    language: java
  ports:
    - port: 9002
      targetPort: 9002 #exposed port from the pod
      protocol: TCP
