payment-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-db-svc
spec:
  type: ClusterIP
  selector:
    type: db
    vendor: postgres
  ports:
    - port: 5432
      targetPort: 5432 #exposed port from the pod
      protocol: TCP
